# leptos-deno

./: .gitattributes  .gitignore  Cargo.toml  README.md  compress.ts  deno.json  index.html  main.ts  patch.ts
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: article.rs  counter.rs  mod.rs
assets/: client.generated.js  client_bg.wasm  deno.generated.js  deno_bg.wasm  server.generated.js  server_bg.wasm
client/: Cargo.toml
client/src/: lib.rs
deno/: Cargo.toml
deno/src/: lib.rs
lib/: client_bg.wasm  deno.generated.js  deno_bg.wasm
server/: Cargo.toml
server/src/: lib.rs
