[package]
name = "client"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = [ "hydrate" ] }
console_error_panic_hook = "0.1"
console_log = "0.2"
leptos = { path = "../../leptos/leptos", features = [ "hydrate" ] }
log = "0.4"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
